# TNG

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ubuntu2404  Makefile  README.md  README_zh.md  TODO.md  clippy.toml  pack-sdk.sh  tng.spec  trusted-network-gateway.spec
rats-cert/: Cargo.toml  README.md  build.rs
rats-cert/src/: errors.rs  lib.rs
rats-cert/src/cert/: create.rs  mod.rs  verify.rs
rats-cert/src/cert/dice/: cbor.rs  mod.rs
rats-cert/src/crypto/: mod.rs
rats-cert/src/tee/: auto.rs  claims.rs  mod.rs
rats-cert/src/tee/coco/: evidence.rs  mod.rs
rats-cert/src/tee/coco/asr_attester/: asr_client.rs  mod.rs
rats-cert/src/tee/coco/attester/: aa_client.rs  mod.rs  restful.rs  uds.rs
rats-cert/src/tee/coco/converter/: builtin.rs  builtin_config.rs  builtin_wasm.rs  grpc.rs  mod.rs  restful.rs
rats-cert/src/tee/coco/protos/: attestation-agent.proto
rats-cert/src/tee/coco/verifier/: builtin.rs  (+4 more)
rats-cert/src/tee/ita/: asr_attester.rs  attester.rs  attester_common.rs  converter.rs  evidence.rs  mod.rs  retry.rs  token.rs  verifier.rs
tng/: Cargo.toml  build.rs
tng-hook/cdylib/: Cargo.toml
tng-hook/cdylib/src/: lib.rs
tng-python/: .gitignore  README.md  README_zh.md  hatch_build.py  pyproject.toml
tng-python/docs/: getting-started.md  getting-started_zh.md
tng-python/tests/: _mock_server.py  conftest.py  test_integration.py  test_unit.py
tng-python/tng/: __init__.py  _tng.py
tng-testsuite/: Cargo.toml  run-test.sh
tng-testsuite/src/: lib.rs  netns.rs  test_context.rs
tng-testsuite/src/task/: app.rs  function.rs  mod.rs  shell.rs  tagged_spawn.rs  tng.rs
tng-testsuite/src/task/app/: browser_client.rs  http_client.rs  http_server.rs  load_balancer.rs  mod.rs  tcp_client.rs  tcp_server.rs  tls_tcp_proxy.rs  udp_client.rs  udp_server.rs
tng-testsuite/src/task/tng/: binary_locator.rs  exec.rs  mod.rs  readyz.rs  source_code.rs
tng-testsuite/tests/: admin_interface.rs  allow_non_tng_traffic.rs  client_http_proxy_server_netfilter_same_node.rs  client_netfilter_server_netfilter.rs  client_socks5_server_netfilter.rs  direct_forward.rs  egress_netfilter_capture.rs  egress_netfilter_cgroup.rs  egress_netfilter_port_range.rs  http_encapulation_with_egress_mapping.rs  http_encapulation_with_egress_netfilter.rs  http_encapulation_with_ingress_httpproxy.rs  http_proxy_ingress_recursion_detect.rs  ingress_netfilter_capture.rs  ingress_netfilter_cgroup.rs  js_sdk_builtin_as.rs  js_sdk_http.rs  mapping_udp.rs  netfilter_ingress_recursion_detect.rs  no_ra.rs  no_ra_http_encapulation_with_egress_mapping.rs  no_ra_ingress_httpproxy.rs  ohttp.rs  server_netfilter.rs  server_netfilter_timeout.rs  tcp_one_way_ra.rs  tcp_one_way_ra_with_as_cert.rs  tcp_one_way_reverse_ra.rs  tcp_two_way_ra.rs  tcp_two_way_ra_ingress_httpproxy_egress_netfilter.rs
tng-testsuite/tests/basic/: admin_interface.rs  no_ra.rs  tcp_one_way_ra.rs  tcp_one_way_ra_with_as_cert.rs  tcp_two_way_ra_ingress_httpproxy_egress_netfilter.rs
tng-testsuite/tests/go_sdk_http/: go_sdk_attestation_info.rs  go_sdk_multi_request.rs  go_sdk_post.rs  go_sdk_rats_tls.rs  go_sdk_roundtrip.rs  go_sdk_streaming.rs
tng-testsuite/tests/hook/: connect_reject_null_ip.rs  egress_hook_basic.rs  egress_hook_capture_local_traffic.rs  ingress_hook_basic.rs  ingress_hook_capture_local_traffic.rs  ingress_hook_capture_local_traffic_true.rs  mod.rs  sendto_tfo_intercept.rs  single_port_intercept.rs
tng-testsuite/tests/http/: client_http_proxy_server_netfilter_same_node.rs  http_encapulation_with_egress_netfilter.rs  http_encapulation_with_ingress_httpproxy.rs  http_proxy_ingress_recursion_detect.rs  http_proxy_port_end.rs  mapping_multi_rule.rs  mapping_port_range.rs  no_ra_ingress_httpproxy.rs
tng-testsuite/tests/netfilter/: client_netfilter_server_netfilter.rs  client_socks5_server_netfilter.rs  egress_netfilter_capture.rs  egress_netfilter_cgroup.rs  ingress_netfilter_capture.rs  ingress_netfilter_cgroup.rs  netfilter_ingress_recursion_detect.rs  server_netfilter.rs
tng-testsuite/tests/ohttp/: client_auth_mode.rs  header_passthrough.rs  ohttp.rs  ohttp_cors_passthrough.rs  ohttp_path_default.rs  ohttp_tls.rs  ohttp_tls_wasm.rs  tls_fixtures.rs
tng-wasm/: .gitignore  Cargo.toml  README.md  README_zh.md  build.rs  package-lock.json
tng-wasm/docs/: cors.md  cors_zh.md
tng-wasm/example/: README.md  README_zh.md  index.html
tng-wasm/pkg/: index.html
tng-wasm/src/: fetch.rs  lib.rs
tng-wasm/src/fetch/: attestation.rs  mod.rs  request.rs  response.rs
tng-wasm/tests/: config.test.mjs  fetch_error.rs  web.rs
tng-wasm/www/: .gitignore  index.html
tng-wasm/www/css/: styles.css
tng-wasm/www/js/: app.js  config.js  examples.js  i18n.js  sse.js
tng/src/: error.rs  exec.rs  lib.rs  runtime.rs  service.rs  state.rs  status.rs
tng/src/config/: control_interface.rs  egress.rs  egress_hook.rs  header_passthrough.rs  ingress.rs  mapping_rule.rs  match_rule.rs  mod.rs  ra.rs
tng/src/config/observability/: metric.rs  mod.rs  trace.rs
tng/src/control_interface/: mod.rs  restful.rs
tng/src/observability/: mod.rs
tng/src/observability/metric/: counter.rs  instance.rs  mod.rs  stream.rs
tng/src/observability/trace/: instance.rs  mod.rs  opentelemetry_span_processor.rs  shutdown_guard_ext.rs
tng/src/tunnel/: access_log.rs  attestation_result.rs  cert_verifier.rs  datagram.rs  endpoint.rs  mod.rs  ra_context.rs  service_metrics.rs  stream.rs
tng/src/tunnel/egress/: flow.rs  hook.rs  mapping.rs  mapping_udp.rs  mod.rs
tng/src/tunnel/ingress/: hook.rs  http_proxy.rs  mapping.rs  mapping_udp.rs  mod.rs  socks5.rs
tng/src/tunnel/ohttp/: key_config.rs  mod.rs
tng/src/tunnel/provider/: attester.rs  converter.rs  evidence.rs  factory.rs  mod.rs  provider_type.rs  token.rs  translate.rs  verifier.rs  verify_policy.rs
tng/src/tunnel/udp/: mod.rs  quic_tunnel.rs
tng/src/tunnel/utils/: cert_manager.rs  endpoint_matcher.rs  file_watcher.rs  forward.rs  http_inspector.rs  hyper.rs  iptables.rs  maybe_cached.rs  mod.rs  runtime.rs  rustls_config.rs  socket.rs  tokio.rs
(+454 files in other folders)
