[workspace]
default-members = ["tng"]
exclude = ["deps/"]
members = [
  "tng",
  "tng-testsuite",
  "tng-wasm",
  "deps/hyper-util-shim",
  "rats-cert",
]
resolver = "2"

[workspace.package]
authors = ["Kun Lai <laikun@linux.alibaba.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/inclavare-containers/tng"
version = "2.4.0"

[workspace.dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = {version = "1", default-features = false, features = ["http1", "http2"]}
hyper-util = {version = "=0.1.7", features = ["service", "client-legacy", "http1", "http2"]}
itertools = "0.14.0"
regex = "1.11.1"
reqwest = {version = "<=0.12.9", default-features = false, features = ["json", "http2", "rustls-tls-webpki-roots", "brotli", "gzip", "zstd"]}# select 0.12.9 version since we have to align to the hyper-util=0.1.7 version used by hyper-util-wasm
scopeguard = "1.2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.47.1", features = ["sync"]}
tracing = "0.1"
tokio-graceful = "0.2.2"
tokio_with_wasm = {version = "=0.8.6", features = ["rt", "macros", "time"]}
tokio_with_wasm_proc = "=0.8.6"

# rats-cert dependencies
as-any = "0.3.2"
async-trait = "0.1.86"
base64 = "0.22.1"
bitflags = "2.8.0"
ciborium = "0.2.2"
jsonwebtoken = {version = "9", default-features = false}
rand = "0.8.5"
ring = "0.17.8"
rsa = {version = "0.9.7", features = ["sha2"]}
rustls-pki-types = "1.10.1"
rustls-webpki = {package = "rustls-webpki", version = "0.103.3", default-features = false, features = ["alloc", "ring"]}
serde_bytes = "0.11.15"
sha2 = {version = "0.10.8", features = ["oid"]}
signature = "2.2.0"
spin = "0.9.8"
strum = {version = "0.26.3", features = ["derive"]}
strum_macros = "0.26.4"
thiserror = "2.0.17"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
zeroize = "1.8.1"

# rats-cert optional dependencies
canon-json = {git = "https://github.com/inclavare-containers/canon-json-rs", rev = "d6fa90c68f60d3d7a51daf942d882b589541be51"}
const-oid = "0.9.6"
flatten-json-object = "0.6.1"
p256 = "0.13.2"
pkcs8 = {version = "0.10.2", features = ["pem"]}
prost = "0.13.4"
protobuf = "~3.7.1"
tonic = {version = "0.13.1", default-features = false, features = ["prost", "codegen", "channel"]}
tonic-build = {version = "0.13.1", default-features = false, features = ["prost"]}
ttrpc = "0.8.4"
ttrpc-codegen = "0.5.0"
x509-cert = {version = "0.2.5", features = ["builder", "pem"]}

# rats-cert target-specific dependencies
time = {version = "0.3.37", features = ["std"]}
tonic-web-wasm-client = "0.7.1"
web-time = "1.1.0"

[patch.crates-io.rustls]
branch = "v/0.23.27-patched"
git = "https://github.com/inclavare-containers/rustls.git"

[patch.crates-io.rustls-webpki]
branch = "v/0.103.3-patched"
git = "https://github.com/inclavare-containers/webpki.git"

[patch.crates-io.reqwest]
git = "https://github.com/inclavare-containers/reqwest.git"
rev = "edd4658e698a030ff04bbb62e954f363b31a25c8"

[patch.crates-io.tokio-graceful]
branch = "wasm"
git = "https://github.com/inclavare-containers/tokio-graceful.git"

[patch.crates-io.hyper]
git = "https://github.com/inclavare-containers/hyper.git"
rev = "59b43a6315a8f48ebfa4d12bbcd80cc0b1969a26"

[patch.crates-io]
hyper-util = {path = "./deps/hyper-util-shim"}

[profile.release.package.tng-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
