[package]
authors = ["Kun Lai <me@imlk.top>"]
edition.workspace = true
license.workspace = true
name = "rats-cert"
version.workspace = true

[dependencies]
anyhow = {workspace = true}
as-any = "0.3.2"
async-trait = "0.1.86"
base64 = "0.22.1"
bitflags = "2.8.0"
bytes = "1.10.0"
canon-json = {git = "https://github.com/inclavare-containers/canon-json-rs", rev = "d6fa90c68f60d3d7a51daf942d882b589541be51", optional = true}
ciborium = "0.2.2"
const-oid = {version = "0.9.6", optional = true}
flatten-json-object = {version = "0.6.1", optional = true}
futures = {workspace = true}
itertools = {workspace = true}
jsonwebtoken = {version = "9", default-features = false}
p256 = {version = "0.13.2", optional = true}
pkcs8 = {version = "0.10.2", features = ["pem"], optional = true}
prost = {version = "0.13.4", optional = true}
protobuf = {version = "~3.7.1", optional = true}
rand = "0.8.5"
reqwest = {workspace = true, optional = true}
ring = {workspace = true, optional = true}
rsa = {version = "0.9.7", features = ["sha2"], optional = true}
rustls-pki-types = {version = "1.10.1", optional = true}
rustls-webpki = {package = "rustls-webpki", version = "0.103.3", optional = true, default-features = false, features = ["alloc", "ring"]}
serde = {workspace = true}
serde_bytes = "0.11.15"
serde_json = {workspace = true}
sha2 = {version = "0.10.8", features = ["oid"], optional = true}
signature = {version = "2.2.0", optional = true}
spin = {workspace = true}
strum = {version = "0.26.3", features = ["derive"]}
strum_macros = "0.26.4"
thiserror = "2.0.17"
tracing = {workspace = true}
ttrpc = {version = "0.8.4", optional = true}
x509-cert = {version = "0.2.5", features = ["builder", "pem"], optional = true}
zeroize = {workspace = true}

[target.'cfg(not(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown")))'.dependencies]
time = {version = "0.3.37", features = ["std"]}
tokio = {workspace = true}
tonic = {version = "0.13.1", default-features = false, features = ["prost", "codegen", "channel"], optional = true}

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
time = {version = "0.3.37", features = ["std", "wasm-bindgen"]}
tokio = {workspace = true}
tokio_with_wasm = {workspace = true}
tonic = {version = "0.13.1", default-features = false, features = ["prost", "codegen"], optional = true}
tonic-web-wasm-client = {version = "0.7.1"}
web-time = "1.1.0"

[features]
attester-coco = [
  "dep:ttrpc-codegen",
  "dep:ttrpc",
  "dep:protobuf",
  "dep:prost",
  "dep:rustls-webpki",
  "dep:rustls-pki-types",
  "dep:reqwest",
  "dep:flatten-json-object",
  "dep:canon-json",
]
verifier-coco = [
  "dep:tonic-build",
  "dep:tonic",
  "dep:protobuf",
  "dep:prost",
  "dep:rustls-webpki",
  "dep:rustls-pki-types",
  "dep:reqwest",
  "dep:flatten-json-object",
]

crypto-rustcrypto = [
  "dep:x509-cert",
  "dep:sha2",
  "dep:p256",
  "dep:rsa",
  "dep:pkcs8",
  "dep:const-oid",
  "dep:signature",
  "dep:rustls-webpki",
  "dep:rustls-pki-types",
]
default = ["crypto-rustcrypto", "attester-coco", "verifier-coco"]

[dev-dependencies]
ctor = "=0.4.1"
hex = {workspace = true}
rayon = "1.10.0"
rstest = "0.25.0"
tempfile = "3.20.0"
tracing-subscriber = {workspace = true}

[build-dependencies]
tonic-build = {version = "0.13.1", default-features = false, features = ["prost"], optional = true}
ttrpc-codegen = {version = "0.5.0", optional = true}
