[package]
authors = ["Kun Lai <laikun@linux.alibaba.com>"]
edition.workspace = true
license.workspace = true
name = "rats-cert"
version.workspace = true

[dependencies]
anyhow = {workspace = true}
as-any = {workspace = true}
async-trait = {workspace = true}
base64 = {workspace = true}
bitflags = {workspace = true}
bytes = {workspace = true}
canon-json = {workspace = true, optional = true}
ciborium = {workspace = true}
const-oid = {workspace = true, optional = true}
flatten-json-object = {workspace = true, optional = true}
futures = {workspace = true}
hex = {workspace = true}
itertools = {workspace = true}
jsonwebtoken = {workspace = true}
kbs-types = {workspace = true}
p256 = {workspace = true, optional = true}
pkcs8 = {workspace = true, optional = true}
prost = {workspace = true, optional = true}
protobuf = {workspace = true, optional = true}
rand = "0.8.5"
reqwest = {workspace = true, optional = true}
ring = {workspace = true, optional = true}
rsa = {workspace = true, optional = true}
rustls-pki-types = {workspace = true, optional = true}
rustls-webpki = {workspace = true, optional = true}
serde = {workspace = true}
serde_bytes = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true, optional = true}
signature = {workspace = true, optional = true}
spin = {workspace = true}
strum = {workspace = true, features = ["derive"]}
strum_macros = {workspace = true}
thiserror = {workspace = true}
tonic-prost = {workspace = true, optional = true}
tracing = {workspace = true}
ttrpc = {workspace = true, optional = true}
x509-cert = {workspace = true, optional = true}
zeroize = {workspace = true}

[target.'cfg(not(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown")))'.dependencies]
attestation-service = {workspace = true, default-features = false, optional = true}
rcgen = {workspace = true, optional = true}
reference-value-provider-service = {workspace = true, default-features = false, optional = true}
tempfile = {workspace = true, optional = true}
time = {workspace = true, features = ["std"]}
tokio = {workspace = true, default-features = true, features = ["fs"]}
tonic = {workspace = true, default-features = false, features = ["codegen", "channel"], optional = true}

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
time = {workspace = true, features = ["std", "wasm-bindgen"]}
tokio = {workspace = true, default-features = false}
tokio_with_wasm = {workspace = true}
tonic = {workspace = true, default-features = false, features = ["codegen"], optional = true}
tonic-web-wasm-client = {workspace = true}
web-time = {workspace = true}

[features]
attester-coco = [
  "dep:ttrpc-codegen",
  "dep:ttrpc",
  "dep:protobuf",
  "dep:prost",
  "dep:rustls-webpki",
  "dep:rustls-pki-types",
  "dep:reqwest",
  "dep:flatten-json-object",
  "dep:canon-json",
]
verifier-coco = [
  "dep:tonic-prost-build",
  "dep:tonic-prost",
  "dep:tonic",
  "dep:protobuf",
  "dep:prost",
  "dep:rustls-webpki",
  "dep:rustls-pki-types",
  "dep:reqwest",
  "dep:flatten-json-object",
]

attester-ita = [
  "attester-coco",
]
verifier-ita = [
  "dep:reqwest",
  "dep:flatten-json-object",
]

crypto-rustcrypto = [
  "dep:x509-cert",
  "dep:sha2",
  "dep:p256",
  "dep:rsa",
  "dep:pkcs8",
  "dep:const-oid",
  "dep:signature",
  "dep:rustls-webpki",
  "dep:rustls-pki-types",
]

# Builtin Attestation Service features (local evidence verification)
# __builtin-as should not be used directly. It is auto-enabled when any TEE-specific builtin feature is enabled
__builtin-as = ["dep:attestation-service", "dep:reference-value-provider-service", "dep:flatten-json-object", "dep:tempfile", "dep:rcgen"]
builtin-as-all = ["__builtin-as", "attestation-service/all-verifier"]
builtin-as-sgx = ["__builtin-as", "attestation-service/sgx-verifier"]
builtin-as-snp = ["__builtin-as", "attestation-service/snp-verifier"]
builtin-as-tdx = ["__builtin-as", "attestation-service/tdx-verifier"]

default = ["crypto-rustcrypto", "attester-coco", "verifier-coco", "__builtin-as"]

[dev-dependencies]
ctor = {workspace = true}
rayon = {workspace = true}
rsa = {workspace = true}
rstest = {workspace = true}
serial_test = {workspace = true}
tempfile = {workspace = true}
tokio = {workspace = true, features = ["rt", "rt-multi-thread", "macros"]}
tracing-subscriber = {workspace = true}
wiremock = "0.6"

[build-dependencies]
tonic-prost-build = {workspace = true, optional = true}
ttrpc-codegen = {workspace = true, optional = true}
