[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tng"
version = "0.1.0"
description = "TNG (Trusted Network Gateway) Python SDK — encrypted HTTP requests with remote attestation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
requests = ["requests>=2.28"]
openai = ["openai>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.hatch.build]
# Include Python source files
include = ["tng/**/*.py"]
# Include the tng binary even though it's in .gitignore
artifacts = ["bin/scripts/tng"]

[tool.hatch.build.targets.wheel.shared-data]
# Install tng binary to {prefix}/bin/tng
"bin/scripts/tng" = "bin/tng"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring TNG egress server + mock backend",
]
