[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tng-sdk"
version = "2.7.2"
description = "TNG (Trusted Network Gateway) Python SDK — encrypted HTTP requests with remote attestation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/inclavare-containers/TNG"
Documentation = "https://github.com/inclavare-containers/TNG/tree/master/tng-python"
Source = "https://github.com/inclavare-containers/TNG/tree/master/tng-python"

[project.optional-dependencies]
httpx = ["httpx>=0.27"]
requests = ["requests>=2.28"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "requests>=2.28",
    "openai>=1.0",
]

[tool.hatch.build]
# Include Python source files
include = ["tng/**/*.py"]
# Include the tng binary even though it's in .gitignore
# Both Unix (tng) and Windows (tng.exe) variants
artifacts = ["bin/scripts/tng", "bin/scripts/tng.exe"]

[tool.hatch.build.targets.wheel.shared-data]
# Install tng binary to {prefix}/bin/tng (Unix) or {prefix}/bin/tng.exe (Windows)
"bin/scripts/tng" = "bin/tng"
"bin/scripts/tng.exe" = "bin/tng.exe"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring TNG egress server + mock backend",
]
