[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "tng-testsuite"
repository.workspace = true
version.workspace = true

[dependencies]
again = "0.1.2"
anyhow = "1.0.98"
async-http-proxy = {version = "1.2.5", features = ["runtime-tokio"]}
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = "0.10.1"
ctor = "=0.4.1"
futures = "0.3.31"
http = "1.3.1"
netns-rs = "0.1.0"
nix = {version = "0.30.1", features = ["signal", "process"]}
opentelemetry-stdout = "0.29.0"
portpicker = "0.1.1"
rand = "0.9.1"
reqwest = {workspace = true}
rtnetlink = "0.16.0"
rustls = {version = "0.23.27", default-features = false, features = ["logging", "std", "tls12", "ring", "brotli"]}
serde_json = "1.0.140"
tng = {path = "../tng", optional = true}
tokio = {workspace = true, features = ["rt-multi-thread", "sync", "process", "signal"]}
tokio-util = "0.7.15"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[dev-dependencies]
serial_test = "3.2.0"

[features]
default = ["on-source-code"]
on-bin = []
on-podman = []
on-source-code = ["dep:tng"]
