[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "tng-testsuite"
repository.workspace = true
version.workspace = true

[dependencies]
again = {workspace = true}
anyhow = {workspace = true}
async-http-proxy = {workspace = true}
async-trait = {workspace = true}
atty = {workspace = true}
axum = {workspace = true, default-features = true, features = ["tokio", "http1", "http2", "ws"]}
axum-extra = {workspace = true}
chromedriver-manager = {workspace = true, optional = true}
ctor = {workspace = true}
futures = {workspace = true}
http = {workspace = true}
hyper = {workspace = true}
itertools = {workspace = true}
netns-rs = {workspace = true}
nix = {workspace = true, features = ["signal", "process"]}
opentelemetry-stdout = {workspace = true}
portpicker = {workspace = true}
rand = {workspace = true}
regex = {workspace = true}
reqwest = {workspace = true, features = ["stream"]}
rtnetlink = {workspace = true}
rustls = {workspace = true, default-features = false, features = ["logging", "std", "tls12", "ring", "brotli"]}
scopeguard = {workspace = true}
serde_json = {workspace = true}
thirtyfour = {workspace = true, optional = true}
tng = {path = "../tng", optional = true}
tokio = {workspace = true, default-features = true, features = ["rt-multi-thread", "sync", "process", "signal", "macros"]}
tokio-util = {workspace = true}
tower-http = {workspace = true, features = ["fs"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[dev-dependencies]
serial_test = {workspace = true}

[features]
default = ["on-source-code"]
js-sdk = ["dep:chromedriver-manager", "dep:thirtyfour"]
on-bin = []
on-podman = []
on-source-code = ["dep:tng"]
