[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "tng-testsuite"
repository.workspace = true
version.workspace = true

[dependencies]
again = {workspace = true}
anyhow = {workspace = true}
async-http-proxy = {workspace = true}
async-trait = {workspace = true}
atty = {workspace = true}
axum = {workspace = true, default-features = true, features = ["tokio", "http1", "http2", "ws"]}
axum-extra = {workspace = true}
chromedriver-manager = {workspace = true, optional = true}
ctor = {workspace = true}
futures = {workspace = true}
http = {workspace = true}
hyper = {workspace = true}
itertools = {workspace = true}
netns-rs = {workspace = true}
nix = {workspace = true, features = ["signal", "process", "mount"]}
opentelemetry-stdout = {workspace = true}
portpicker = {workspace = true}
rand = {workspace = true}
regex = {workspace = true}
reqwest = {workspace = true, features = ["stream"]}
rtnetlink = {workspace = true}
rustls = {workspace = true, default-features = false, features = ["logging", "std", "tls12", "ring", "brotli"]}
scopeguard = {workspace = true}
serde_json = {workspace = true}
thirtyfour = {workspace = true, optional = true}
tng = {path = "../tng", optional = true}
tokio = {workspace = true, default-features = true, features = ["rt-multi-thread", "sync", "process", "signal", "macros"]}
tokio-util = {workspace = true}
tower-http = {workspace = true, features = ["fs"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
which = {workspace = true}

[dev-dependencies]
serial_test = {workspace = true}

[features]
default = ["on-source-code"]
go-sdk = []
js-sdk = ["dep:chromedriver-manager", "dep:thirtyfour"]
on-bin = []
on-podman = []
on-source-code = ["dep:tng"]

# Integration tests organized by functional domain
[[test]]
name = "admin_interface"
path = "tests/basic/admin_interface.rs"

[[test]]
name = "allow_non_tng_traffic"
path = "tests/ohttp/allow_non_tng_traffic.rs"

[[test]]
name = "client_http_proxy_server_netfilter_same_node"
path = "tests/http/client_http_proxy_server_netfilter_same_node.rs"

[[test]]
name = "client_netfilter_server_netfilter"
path = "tests/netfilter/client_netfilter_server_netfilter.rs"

[[test]]
name = "client_socks5_server_netfilter"
path = "tests/netfilter/client_socks5_server_netfilter.rs"

[[test]]
name = "direct_forward"
path = "tests/basic/direct_forward.rs"

[[test]]
name = "egress_netfilter_capture"
path = "tests/netfilter/egress_netfilter_capture.rs"

[[test]]
name = "egress_netfilter_cgroup"
path = "tests/netfilter/egress_netfilter_cgroup.rs"

[[test]]
name = "egress_netfilter_port_range"
path = "tests/netfilter/egress_netfilter_port_range.rs"

[[test]]
name = "http_encapulation_with_egress_mapping"
path = "tests/http/http_encapulation_with_egress_mapping.rs"

[[test]]
name = "http_encapulation_with_egress_netfilter"
path = "tests/http/http_encapulation_with_egress_netfilter.rs"

[[test]]
name = "http_encapulation_with_ingress_httpproxy"
path = "tests/http/http_encapulation_with_ingress_httpproxy.rs"

[[test]]
name = "http_proxy_ingress_recursion_detect"
path = "tests/http/http_proxy_ingress_recursion_detect.rs"

[[test]]
name = "ingress_netfilter_capture"
path = "tests/netfilter/ingress_netfilter_capture.rs"

[[test]]
name = "ingress_netfilter_cgroup"
path = "tests/netfilter/ingress_netfilter_cgroup.rs"

[[test]]
name = "js_sdk_http"
path = "tests/js_sdk_http.rs"
required-features = ["js-sdk"]

[[test]]
name = "js_sdk_builtin_as"
path = "tests/js_sdk_builtin_as.rs"
required-features = ["js-sdk"]

[[test]]
name = "netfilter_ingress_recursion_detect"
path = "tests/netfilter/netfilter_ingress_recursion_detect.rs"

[[test]]
name = "no_ra"
path = "tests/basic/no_ra.rs"

[[test]]
name = "no_ra_http_encapulation_with_egress_mapping"
path = "tests/http/no_ra_http_encapulation_with_egress_mapping.rs"

[[test]]
name = "http_proxy_port_end"
path = "tests/http/http_proxy_port_end.rs"

[[test]]
name = "no_ra_ingress_httpproxy"
path = "tests/http/no_ra_ingress_httpproxy.rs"

[[test]]
name = "mapping_port_range"
path = "tests/http/mapping_port_range.rs"

[[test]]
name = "mapping_udp"
path = "tests/mapping_udp.rs"

[[test]]
name = "mapping_multi_rule"
path = "tests/http/mapping_multi_rule.rs"

[[test]]
name = "ohttp"
path = "tests/ohttp/ohttp.rs"

[[test]]
name = "client_auth_mode"
path = "tests/ohttp/client_auth_mode.rs"

[[test]]
name = "header_passthrough"
path = "tests/ohttp/header_passthrough.rs"

[[test]]
name = "ohttp_path_default"
path = "tests/ohttp/ohttp_path_default.rs"

[[test]]
name = "server_netfilter"
path = "tests/netfilter/server_netfilter.rs"

[[test]]
name = "server_netfilter_timeout"
path = "tests/netfilter/server_netfilter_timeout.rs"

[[test]]
name = "tcp_one_way_ra"
path = "tests/basic/tcp_one_way_ra.rs"

[[test]]
name = "tcp_one_way_ra_with_as_cert"
path = "tests/basic/tcp_one_way_ra_with_as_cert.rs"

[[test]]
name = "tcp_one_way_reverse_ra"
path = "tests/basic/tcp_one_way_reverse_ra.rs"

[[test]]
name = "tcp_two_way_ra"
path = "tests/basic/tcp_two_way_ra.rs"

[[test]]
name = "tcp_two_way_ra_ingress_httpproxy_egress_netfilter"
path = "tests/basic/tcp_two_way_ra_ingress_httpproxy_egress_netfilter.rs"

[[test]]
name = "egress_hook_basic"
path = "tests/hook/egress_hook_basic.rs"
required-features = ["on-bin"]

[[test]]
name = "ingress_hook_basic"
path = "tests/hook/ingress_hook_basic.rs"
required-features = ["on-bin"]

[[test]]
name = "connect_reject_null_ip"
path = "tests/hook/connect_reject_null_ip.rs"
required-features = ["on-bin"]

[[test]]
name = "sendto_tfo_intercept"
path = "tests/hook/sendto_tfo_intercept.rs"
required-features = ["on-bin"]

[[test]]
name = "go_sdk_roundtrip"
path = "tests/go_sdk_http/go_sdk_roundtrip.rs"
required-features = ["go-sdk"]

[[test]]
name = "go_sdk_post"
path = "tests/go_sdk_http/go_sdk_post.rs"
required-features = ["go-sdk"]

[[test]]
name = "go_sdk_streaming"
path = "tests/go_sdk_http/go_sdk_streaming.rs"
required-features = ["go-sdk"]

[[test]]
name = "go_sdk_attestation_info"
path = "tests/go_sdk_http/go_sdk_attestation_info.rs"
required-features = ["go-sdk"]

[[test]]
name = "go_sdk_multi_request"
path = "tests/go_sdk_http/go_sdk_multi_request.rs"
required-features = ["go-sdk"]

[[test]]
name = "go_sdk_rats_tls"
path = "tests/go_sdk_http/go_sdk_rats_tls.rs"
required-features = ["go-sdk"]

[[test]]
name = "ingress_hook_capture_local_traffic"
path = "tests/hook/ingress_hook_capture_local_traffic.rs"
required-features = ["on-bin"]

[[test]]
name = "egress_hook_capture_local_traffic"
path = "tests/hook/egress_hook_capture_local_traffic.rs"
required-features = ["on-bin"]

[[test]]
name = "ingress_hook_capture_local_traffic_true"
path = "tests/hook/ingress_hook_capture_local_traffic_true.rs"
required-features = ["on-bin"]

