[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "tng-wasm"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true, default-features = false, features = ["json"]}# to disable mio
bytes = {workspace = true}
futures = {workspace = true}
getrandom_0_2 = {package = "getrandom", version = "0.2", features = ["js"]}
getrandom_0_3 = {package = "getrandom", version = "0.3", features = ["wasm_js"]}
gloo = {workspace = true, features = ["utils", "net"]}
hex = {workspace = true}
http = {workspace = true}
http-body = {workspace = true}
http-body-util = {workspace = true}
hyper = {workspace = true, features = ["client"]}
js-sys = {workspace = true}
serde = {workspace = true}
serde-wasm-bindgen = {workspace = true}
serde_json = {workspace = true}
tng = {path = "../tng", default-features = false, features = ["ingress"]}
tokio = {workspace = true, default-features = false}
tokio-graceful = {workspace = true, default-features = false}
tracing = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-wasm = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
wasm-streams = {workspace = true}
web-sys = {workspace = true, features = ["Headers", "Request", "RequestInit", "Response", "ResponseInit"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {workspace = true, optional = true}

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
tokio_with_wasm = {workspace = true}
tokio_with_wasm_proc = {workspace = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# https://github.com/rustwasm/wasm-pack/issues/1351#issuecomment-2100231587
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# this works the same as `--keep-debug` in wasm-bindgen
dwarf-debug-info = true
